Implemented user borrowed books endpoint and added testcases and docs
